--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 Hello World
+
+<html>
+<h1>Johnny Wu 2021</h1>
+
+<p><img src="IMG345.JPEG" height = 300 width = 250></p>
+
+Find me on:
+<a href = "personallab5.github.io"> Github</a>
+<a href = "JonathanWu@umass.edu">Email</a>
+
+
+
+</html>
